some fixes, add java lsp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:RGB"
+
 # Better split shortcuts
 bind | split-window -h
 bind - split-window -v
