--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:RGB"
 
+set -g base-index 1
+set -g pane-base-index 1
+
 # Better split shortcuts
 bind | split-window -h
 bind - split-window -v
