--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,17 +8,15 @@ set -g pane-base-index 1
 bind | split-window -h
 bind - split-window -v
 
-# Easy pane navigation with Alt + arrow keys
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
 
-# Resize panes with Ctrl + arrow keys
-bind -n C-Left resize-pane -L 5
-bind -n C-Right resize-pane -R 5
-bind -n C-Up resize-pane -U 2
-bind -n C-Down resize-pane -D 2
+bind -n M-Left resize-pane -L 5
+bind -n M-Right resize-pane -R 5
+bind -n M-Up resize-pane -U 2
+bind -n M-Down resize-pane -D 2
 
 # Window management
 bind c new-window         # create new window
